instagram and strava updates from 2017-01-30

--- a/index.html
+++ b/index.html
@@ -173,6 +173,45 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000817.jpg" title="Cool picture from @agonz21 this morning! #bicycle #cycling #bikewinter #fatbike #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Cool picture from @agonz21 this morning! #bicycle #cycling #bikewinter #fatbike #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000817.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000815.jpg" title="Cold grey sunrise ride. #cycling #bicycle #bikewinter #fatbike #bikepacking #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Cold grey sunrise ride. #cycling #bicycle #bikewinter #fatbike #bikepacking #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000815.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000816.jpg" title="It's a bird, it's a train, no, it's @elliotlovestarbicycles #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>agonz21</h4>
+                              <small>It's a bird, it's a train, no, it's @elliotlovestarbicycles #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000816.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000814.jpg" title="Fatbikes, donuts, and great friends! #lovestarraceclub #fatbike" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>ddave12000</h4>
@@ -387,45 +426,6 @@
                               <small>#best9of2016 It was a good year for bikes. #babySNUB mastering pedals... #babyARC riding in his first #cyclocross race... epic trip to Mt. Hood...lots of closer-to-home adventures with the kids...thousands of miles with my #lovestarfactoryteam friends. Gravel, snow, ice, heat and more. I had some great victories on the bike and some crushing defeats. Can't wait for 2017.</small>
                            </div>
                            <img src="../lsphotos/image000797.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000798.jpg" title="Final ride of 2016 🚲 #festive500 #lovestarfactoryteam #cycling #bicycle #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Final ride of 2016 🚲 #festive500 #lovestarfactoryteam #cycling #bicycle #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000798.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000796.jpg" title="Riding on ice in the dark, finished my ride just as the sun was coming up. #festive500 #cycling #fatbike #bikepacking #bicycle #bikechi #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Riding on ice in the dark, finished my ride just as the sun was coming up. #festive500 #cycling #fatbike #bikepacking #bicycle #bikechi #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000796.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000795.jpg" title="With the unusually mild weather today the roads dried up so I took the new whip for an outdoor spin this afternoon. A few tweaks to the fit and she'll be ready to crush gravel this spring! Thanks again @ponylou ! #lovestarraceclub #superx #forcecx1" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>With the unusually mild weather today the roads dried up so I took the new whip for an outdoor spin this afternoon. A few tweaks to the fit and she'll be ready to crush gravel this spring! Thanks again @ponylou ! #lovestarraceclub #superx #forcecx1</small>
-                           </div>
-                           <img src="../lsphotos/image000795.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
