--- a/instagram10.html
+++ b/instagram10.html
@@ -6,6 +6,45 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000572.jpg" title="#baaw #lovestarfactoryteam #moots #supersix" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>#baaw #lovestarfactoryteam #moots #supersix</small>
+                           </div>
+                           <img src="../lsphotos/image000572.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000122.jpg" title="Riding bikes is the best when you ride with great people . . . and their shadows #lovestarbicyclebags #yodacento" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>agonz21</h4>
+                              <small>Riding bikes is the best when you ride with great people . . . and their shadows #lovestarbicyclebags #yodacento</small>
+                           </div>
+                           <img src="../lsphotos/image000122.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000573.jpg" title="#lovestarfactoryteam #cycling #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>theandyhudson</h4>
+                              <small>#lovestarfactoryteam #cycling #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000573.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000123.jpg" title="Now that was a donut. #donutride #cycling #lovestarbicyclebags" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -220,45 +259,6 @@
                               <small>Mile 75. #almanzo100 #cycling #gravelgrinder #bicycle #lovestarfactoryteam</small>
                            </div>
                            <img src="../lsphotos/image000581.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000132.jpg" title="Perfect &quot;Simpsons clouds&quot; day for Team Lovestar to crush some gravel on the #almanzo100 #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>agonz21</h4>
-                              <small>Perfect "Simpsons clouds" day for Team Lovestar to crush some gravel on the #almanzo100 #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000132.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000582.jpg" title="Staged and ready for tomorrow's #almanzo100 ...you know you're in for a good day when your bikes get all muddy just driving to the race start. #cycling #gravelgrinder #bicycle #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Staged and ready for tomorrow's #almanzo100 ...you know you're in for a good day when your bikes get all muddy just driving to the race start. #cycling #gravelgrinder #bicycle #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000582.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000583.jpg" title="Obligatory pre-race caravan photo. Rolling out to the #almanzo100 this weekend. #lovestarfactoryteam #cycling #bicycle #gravelgrinder" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Obligatory pre-race caravan photo. Rolling out to the #almanzo100 this weekend. #lovestarfactoryteam #cycling #bicycle #gravelgrinder</small>
-                           </div>
-                           <img src="../lsphotos/image000583.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
