--- a/instagram15.html
+++ b/instagram15.html
@@ -6,6 +6,45 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000171.jpg" title="Cold sunrise ride. #cycling #bikewinter #moots #psychloX #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Cold sunrise ride. #cycling #bikewinter #moots #psychloX #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000171.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000623.jpg" title="After today's summery February ride. #LovestarFactoryTeam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>theandyhudson</h4>
+                              <small>After today's summery February ride. #LovestarFactoryTeam</small>
+                           </div>
+                           <img src="../lsphotos/image000623.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000624.jpg" title="The first ride each spring that I get to wear only a single layer always feels like magic. #lovestarfactoryteam #cycling #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>The first ride each spring that I get to wear only a single layer always feels like magic. #lovestarfactoryteam #cycling #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000624.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000625.jpg" title="Today was a road whip day. #cycling #bikechi #lovestarfactoryteam #bmc" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -220,45 +259,6 @@
                               <small>Somebody was just a little proud of the Pogies she helped make. #babySNUB #adventuredad #bikewinter #lovestarbicyclebags #clearybikes #handmade #SewRad </small>
                            </div>
                            <img src="../lsphotos/image000178.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000179.jpg" title="#babySNUB in the workshop helping add some snaps to her Micro Pogies. #handmade #lovestarbicyclebags #bikewinter " rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#babySNUB in the workshop helping add some snaps to her Micro Pogies. #handmade #lovestarbicyclebags #bikewinter </small>
-                           </div>
-                           <img src="../lsphotos/image000179.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000180.jpg" title="Cold morning Ride. #lovestarfactoryteam #lovestarbicyclebags #bikewinter #cycling #moots " rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Cold morning Ride. #lovestarfactoryteam #lovestarbicyclebags #bikewinter #cycling #moots </small>
-                           </div>
-                           <img src="../lsphotos/image000180.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000181.jpg" title="Busted out the skinny tire's today. Kicking off spring training for a ambitious #gravelgrinder season... #BarrYRoubaix #Almanzo100 and #DirtyKanza 200 are all on the books for this year. #lovestarbicyclebags #lovestarfactoryteam " rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Busted out the skinny tire's today. Kicking off spring training for a ambitious #gravelgrinder season... #BarrYRoubaix #Almanzo100 and #DirtyKanza 200 are all on the books for this year. #lovestarbicyclebags #lovestarfactoryteam </small>
-                           </div>
-                           <img src="../lsphotos/image000181.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
