--- a/instagram2.html
+++ b/instagram2.html
@@ -6,6 +6,45 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000778.jpg" title="Snow biking through fresh powder is a great way to start your day. #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>jim_ftw</h4>
+                              <small>Snow biking through fresh powder is a great way to start your day. #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000778.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000775.jpg" title="Sunrise ride. Frozen lagoons. There is no off season for bicycles, since getting a fatbike winter is rapidly becoming one of my favorite times to ride. #cycling #bicycle #fatbike #bikechi #45nrth #icebike #bikepacking #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Sunrise ride. Frozen lagoons. There is no off season for bicycles, since getting a fatbike winter is rapidly becoming one of my favorite times to ride. #cycling #bicycle #fatbike #bikechi #45nrth #icebike #bikepacking #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000775.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000774.jpg" title="Fresh dusting of snow. Definitely time to put on the studded tires. #fatbike #cycling #bicycle #snowbike #bikepacking #LovestarBicycleBags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Fresh dusting of snow. Definitely time to put on the studded tires. #fatbike #cycling #bicycle #snowbike #bikepacking #LovestarBicycleBags</small>
+                           </div>
+                           <img src="../lsphotos/image000774.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000773.jpg" title="#myparlee looks like summer.  Me, not so much.  Subzero wind chills made this a challenging ride but big thanks to @elliotlovestarbicycles for toughening me up and getting me closer to my goals #lovestarraceclub" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>agonz21</h4>
@@ -220,45 +259,6 @@
                               <small>Cold morning... hot coffee. #lovestarraceclub</small>
                            </div>
                            <img src="../lsphotos/image000005.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000011.jpg" title="Sunrise ride...probably one of the last really nice days this season. Makin' the most of it. #bikechi #cycling #ridecannondale #bicycle #cyclocross #cx #LoveStarRaceClub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Sunrise ride...probably one of the last really nice days this season. Makin' the most of it. #bikechi #cycling #ridecannondale #bicycle #cyclocross #cx #LoveStarRaceClub</small>
-                           </div>
-                           <img src="../lsphotos/image000011.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000003.jpg" title="Today's off to a good start. #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>theandyhudson</h4>
-                              <small>Today's off to a good start. #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000003.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000002.jpg" title="Eli has been trying to put screws and tools in his shirt to fix his bike on the way to the Y, and Nora giggled and danced in excitement that her and Eli are matching. #LoveStarRaceClub #littlelovestarracers" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>boorittany</h4>
-                              <small>Eli has been trying to put screws and tools in his shirt to fix his bike on the way to the Y, and Nora giggled and danced in excitement that her and Eli are matching. #LoveStarRaceClub #littlelovestarracers</small>
-                           </div>
-                           <img src="../lsphotos/image000002.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
