--- a/instagram7.html
+++ b/instagram7.html
@@ -6,6 +6,45 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000070.jpg" title="Day 3, Mt Hood loop. Taking some time to chill and enjoy the scenery. Such a beautiful place... #lovestarraceclub #trilliumlake" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>agonz21</h4>
+                              <small>Day 3, Mt Hood loop. Taking some time to chill and enjoy the scenery. Such a beautiful place... #lovestarraceclub #trilliumlake</small>
+                           </div>
+                           <img src="../lsphotos/image000070.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000071.jpg" title="Why drive when you can ride? #lovestarraceclub #cycling" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>theandyhudson</h4>
+                              <small>Why drive when you can ride? #lovestarraceclub #cycling</small>
+                           </div>
+                           <img src="../lsphotos/image000071.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000072.jpg" title="Day 2. @elliotlovestarbicycles Mt. Hood bike packing adventure. View from Surveyors Ridge. #bikecamping #bikepacking #mthood #fatbike #adventurebike #lovestarbicyclebags #custombikebags #lovestarraceclub #lovestarbicyclebags #cycling #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>pattylouwho55</h4>
+                              <small>Day 2. @elliotlovestarbicycles Mt. Hood bike packing adventure. View from Surveyors Ridge. #bikecamping #bikepacking #mthood #fatbike #adventurebike #lovestarbicyclebags #custombikebags #lovestarraceclub #lovestarbicyclebags #cycling #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000072.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000106.jpg" title="Mount Hood. #bikepacking #bikecamping #mthood #fatbike #bicycle #adventurebike #cycling #mtb #handmade #lovestarbicyclebags" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -220,45 +259,6 @@
                               <small>Ride report: Dark...Group...FAST!...Boom...Solo...Sunrise...Coffee...friends!...ride......phew. #cycling #bicycle #bikechi #lovestarfactoryteam</small>
                            </div>
                            <img src="../lsphotos/image000546.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000079.jpg" title="#crossiscoming skillz&drillz team rides have begun. #cycling #bicycle #cx #bikechi #LovestarRaceClub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#crossiscoming skillz&drillz team rides have begun. #cycling #bicycle #cx #bikechi #LovestarRaceClub</small>
-                           </div>
-                           <img src="../lsphotos/image000079.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000547.jpg" title="Felt great to ride on my streets again this morning. #lovestarfactoryteam #cycling" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>theandyhudson</h4>
-                              <small>Felt great to ride on my streets again this morning. #lovestarfactoryteam #cycling</small>
-                           </div>
-                           <img src="../lsphotos/image000547.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000548.jpg" title="Good Morning. #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>jim_ftw</h4>
-                              <small>Good Morning. #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000548.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
