--- a/instagram8.html
+++ b/instagram8.html
@@ -6,6 +6,45 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000079.jpg" title="#crossiscoming skillz&drillz team rides have begun. #cycling #bicycle #cx #bikechi #LovestarRaceClub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>#crossiscoming skillz&drillz team rides have begun. #cycling #bicycle #cx #bikechi #LovestarRaceClub</small>
+                           </div>
+                           <img src="../lsphotos/image000079.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000547.jpg" title="Felt great to ride on my streets again this morning. #lovestarfactoryteam #cycling" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>theandyhudson</h4>
+                              <small>Felt great to ride on my streets again this morning. #lovestarfactoryteam #cycling</small>
+                           </div>
+                           <img src="../lsphotos/image000547.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000548.jpg" title="Good Morning. #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>jim_ftw</h4>
+                              <small>Good Morning. #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000548.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000549.jpg" title="Took the fatty on my first trail ride. Feel like I discovered a whole new world! #fatbike #borealis #lovestarfactoryteam" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>ddave12000</h4>
@@ -220,45 +259,6 @@
                               <small>Crushers. #cycling #bicycle #bikechi #lovestarfactoryteam</small>
                            </div>
                            <img src="../lsphotos/image000555.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000556.jpg" title="Pair of Parlees #lovestarfactoryteam #cycling #bikechi #bicycle #myparlee" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Pair of Parlees #lovestarfactoryteam #cycling #bikechi #bicycle #myparlee</small>
-                           </div>
-                           <img src="../lsphotos/image000556.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000557.jpg" title="This guy...always a class act. #lovestarfactoryteam #cycling #bicycle #sockdoping" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>This guy...always a class act. #lovestarfactoryteam #cycling #bicycle #sockdoping</small>
-                           </div>
-                           <img src="../lsphotos/image000557.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000121.jpg" title="My Vader mask off-cranium. #lazersport #magnetoM2 #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>agonz21</h4>
-                              <small>My Vader mask off-cranium. #lazersport #magnetoM2 #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000121.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
