--- a/instagram9.html
+++ b/instagram9.html
@@ -6,6 +6,45 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000556.jpg" title="Pair of Parlees #lovestarfactoryteam #cycling #bikechi #bicycle #myparlee" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Pair of Parlees #lovestarfactoryteam #cycling #bikechi #bicycle #myparlee</small>
+                           </div>
+                           <img src="../lsphotos/image000556.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000557.jpg" title="This guy...always a class act. #lovestarfactoryteam #cycling #bicycle #sockdoping" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>This guy...always a class act. #lovestarfactoryteam #cycling #bicycle #sockdoping</small>
+                           </div>
+                           <img src="../lsphotos/image000557.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000121.jpg" title="My Vader mask off-cranium. #lazersport #magnetoM2 #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>agonz21</h4>
+                              <small>My Vader mask off-cranium. #lazersport #magnetoM2 #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000121.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000558.jpg" title="#sockdoping game was strong today...#cycling #bicycle #coffeeride #lovestarfactoryteam" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -220,45 +259,6 @@
                               <small>Enjoyed Mike's donuts & Chicken in Kenosha for breakfast today. #lovestarfactoryteam</small>
                            </div>
                            <img src="../lsphotos/image000571.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000572.jpg" title="#baaw #lovestarfactoryteam #moots #supersix" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>#baaw #lovestarfactoryteam #moots #supersix</small>
-                           </div>
-                           <img src="../lsphotos/image000572.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000122.jpg" title="Riding bikes is the best when you ride with great people . . . and their shadows #lovestarbicyclebags #yodacento" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>agonz21</h4>
-                              <small>Riding bikes is the best when you ride with great people . . . and their shadows #lovestarbicyclebags #yodacento</small>
-                           </div>
-                           <img src="../lsphotos/image000122.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000573.jpg" title="#lovestarfactoryteam #cycling #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>theandyhudson</h4>
-                              <small>#lovestarfactoryteam #cycling #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000573.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
