--- a/instagram16.html
+++ b/instagram16.html
@@ -6,6 +6,45 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000179.jpg" title="#babySNUB in the workshop helping add some snaps to her Micro Pogies. #handmade #lovestarbicyclebags #bikewinter " rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>#babySNUB in the workshop helping add some snaps to her Micro Pogies. #handmade #lovestarbicyclebags #bikewinter </small>
+                           </div>
+                           <img src="../lsphotos/image000179.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000180.jpg" title="Cold morning Ride. #lovestarfactoryteam #lovestarbicyclebags #bikewinter #cycling #moots " rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Cold morning Ride. #lovestarfactoryteam #lovestarbicyclebags #bikewinter #cycling #moots </small>
+                           </div>
+                           <img src="../lsphotos/image000180.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000181.jpg" title="Busted out the skinny tire's today. Kicking off spring training for a ambitious #gravelgrinder season... #BarrYRoubaix #Almanzo100 and #DirtyKanza 200 are all on the books for this year. #lovestarbicyclebags #lovestarfactoryteam " rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Busted out the skinny tire's today. Kicking off spring training for a ambitious #gravelgrinder season... #BarrYRoubaix #Almanzo100 and #DirtyKanza 200 are all on the books for this year. #lovestarbicyclebags #lovestarfactoryteam </small>
+                           </div>
+                           <img src="../lsphotos/image000181.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000182.jpg" title="#lakemichigan never disappoints. #fatbike #fatbikefriday #bikepackingbags #pogies #lovestarbicyclebags #cycling #bicycle #bikewinter " rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -220,49 +259,6 @@
                               <small>Toasty in her micro-pogies! #babySNUB #lovestarbicyclebags #pogies #fatbike #clearybikes #adventuredad</small>
                            </div>
                            <img src="../lsphotos/image000195.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000196.jpg" title="More awesome custom gear!  So cool! #clearygecko #clearybikes #Repost @elliotlovestarbicycles with @repostapp.
-・・・
-Finished up a set of micro-pogies for a #clearybikes Gecko. Hard to appreciate the scale of these from the photo, but they are adorbs. #lovestarbicyclebags #bikepacking #fatbike #pogies #bikewinter #futurecyclist #cycling" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>clearybikes</h4>
-                              <small>More awesome custom gear!  So cool! #clearygecko #clearybikes #Repost @elliotlovestarbicycles with @repostapp.
-・・・
-Finished up a set of micro-pogies for a #clearybikes Gecko. Hard to appreciate the scale of these from the photo, but they are adorbs. #lovestarbicyclebags #bikepacking #fatbike #pogies #bikewinter #futurecyclist #cycling</small>
-                           </div>
-                           <img src="../lsphotos/image000196.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000197.jpg" title="Finished up a set of micro-pogies for a #clearybikes Gecko. Hard to appreciate the scale of these from the photo, but they are adorbs. #lovestarbicyclebags #bikepacking #fatbike #pogies #bikewinter #futurecyclist #cycling" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Finished up a set of micro-pogies for a #clearybikes Gecko. Hard to appreciate the scale of these from the photo, but they are adorbs. #lovestarbicyclebags #bikepacking #fatbike #pogies #bikewinter #futurecyclist #cycling</small>
-                           </div>
-                           <img src="../lsphotos/image000197.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000198.jpg" title="Fresh snow! After the first mile or so on the #northbranchtrail the conditions were so perfect, I turned off all of my lights and rode in darkness. As my eyes adjusted I could see everything, and it was so quiet with the fresh snow...It was beautiful beyond description. #fatbike #lovestarbicyclebags #bikepackingbags #bikepacking #cycling #nightride" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Fresh snow! After the first mile or so on the #northbranchtrail the conditions were so perfect, I turned off all of my lights and rode in darkness. As my eyes adjusted I could see everything, and it was so quiet with the fresh snow...It was beautiful beyond description. #fatbike #lovestarbicyclebags #bikepackingbags #bikepacking #cycling #nightride</small>
-                           </div>
-                           <img src="../lsphotos/image000198.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
