--- a/instagram17.html
+++ b/instagram17.html
@@ -6,6 +6,49 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000196.jpg" title="More awesome custom gear!  So cool! #clearygecko #clearybikes #Repost @elliotlovestarbicycles with @repostapp.
+・・・
+Finished up a set of micro-pogies for a #clearybikes Gecko. Hard to appreciate the scale of these from the photo, but they are adorbs. #lovestarbicyclebags #bikepacking #fatbike #pogies #bikewinter #futurecyclist #cycling" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>clearybikes</h4>
+                              <small>More awesome custom gear!  So cool! #clearygecko #clearybikes #Repost @elliotlovestarbicycles with @repostapp.
+・・・
+Finished up a set of micro-pogies for a #clearybikes Gecko. Hard to appreciate the scale of these from the photo, but they are adorbs. #lovestarbicyclebags #bikepacking #fatbike #pogies #bikewinter #futurecyclist #cycling</small>
+                           </div>
+                           <img src="../lsphotos/image000196.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000197.jpg" title="Finished up a set of micro-pogies for a #clearybikes Gecko. Hard to appreciate the scale of these from the photo, but they are adorbs. #lovestarbicyclebags #bikepacking #fatbike #pogies #bikewinter #futurecyclist #cycling" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Finished up a set of micro-pogies for a #clearybikes Gecko. Hard to appreciate the scale of these from the photo, but they are adorbs. #lovestarbicyclebags #bikepacking #fatbike #pogies #bikewinter #futurecyclist #cycling</small>
+                           </div>
+                           <img src="../lsphotos/image000197.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000198.jpg" title="Fresh snow! After the first mile or so on the #northbranchtrail the conditions were so perfect, I turned off all of my lights and rode in darkness. As my eyes adjusted I could see everything, and it was so quiet with the fresh snow...It was beautiful beyond description. #fatbike #lovestarbicyclebags #bikepackingbags #bikepacking #cycling #nightride" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Fresh snow! After the first mile or so on the #northbranchtrail the conditions were so perfect, I turned off all of my lights and rode in darkness. As my eyes adjusted I could see everything, and it was so quiet with the fresh snow...It was beautiful beyond description. #fatbike #lovestarbicyclebags #bikepackingbags #bikepacking #cycling #nightride</small>
+                           </div>
+                           <img src="../lsphotos/image000198.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000199.jpg" title="...then the fog rolled in. #fatbike #lovestarbicyclebags #bikepackingbags #bikepacking #cycling" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -224,45 +267,6 @@ Angry sky & punishing winds for today's #raphafestive500 ride. #cycling #cyclocr
                               <small>Sunset ride. #fatbike #cycling #lovestarbicyclebags #bikepackingbags #bikepacking #bikechi</small>
                            </div>
                            <img src="../lsphotos/image000211.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000082.jpg" title="So muddy. So fun. #hughjassfatbikeseries #fatbike #lovestarfactoryteam #lovestarbicyclebags #championsystem" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>So muddy. So fun. #hughjassfatbikeseries #fatbike #lovestarfactoryteam #lovestarbicyclebags #championsystem</small>
-                           </div>
-                           <img src="../lsphotos/image000082.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000641.jpg" title="First #fatbike race in the books. Thanks @wheelandsprocket for a great time! #lovestarfactoryteam #cycling" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>First #fatbike race in the books. Thanks @wheelandsprocket for a great time! #lovestarfactoryteam #cycling</small>
-                           </div>
-                           <img src="../lsphotos/image000641.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000212.jpg" title="...and I thought #Cyclocross was weird. What did I get myself into? #fatbike #wheelandsprocket #lovestarbicyclebags #bikepackingbags #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>...and I thought #Cyclocross was weird. What did I get myself into? #fatbike #wheelandsprocket #lovestarbicyclebags #bikepackingbags #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000212.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
