--- a/instagram25.html
+++ b/instagram25.html
@@ -6,6 +6,45 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000713.jpg" title="Moon's out... #cycling #moot #psychloX #bicycle #bikechi #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Moon's out... #cycling #moot #psychloX #bicycle #bikechi #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000713.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000274.jpg" title="Recalling every #zombie movie ever... #fatbike #adventurebike #bikechi #bikepacking #lovestarbicyclebags #cycling #bicycle #bikecommute" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Recalling every #zombie movie ever... #fatbike #adventurebike #bikechi #bikepacking #lovestarbicyclebags #cycling #bicycle #bikecommute</small>
+                           </div>
+                           <img src="../lsphotos/image000274.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000275.jpg" title="Not too bad for a morning commute... #fatbike #cycling #bikechi #bikecommute #bikepacking #bicyclebag #framebag #gravelgrinder #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Not too bad for a morning commute... #fatbike #cycling #bikechi #bikecommute #bikepacking #bicyclebag #framebag #gravelgrinder #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000275.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000714.jpg" title="Sunrise vibes. #lovestarfactoryteam #cycling #cyclist #bikechi" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -224,45 +263,6 @@ Another shot from my ride home tonight... #lovestarbicyclebags #fatbike #cycling
                               <small>Some of these roads...by themselves, are worth the trip to #bigsky #lovestarfactoryteam #cycling #cyclist</small>
                            </div>
                            <img src="../lsphotos/image000720.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000721.jpg" title="Road bikes off road. #bigsky #moots #psychloX #cycling #cyclist #gravelgrinder #gravel #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Road bikes off road. #bigsky #moots #psychloX #cycling #cyclist #gravelgrinder #gravel #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000721.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000722.jpg" title="Morning climb... #cycling #cyclist #moots #psychloX #lovestarfactoryteam #bigsky #" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Morning climb... #cycling #cyclist #moots #psychloX #lovestarfactoryteam #bigsky #</small>
-                           </div>
-                           <img src="../lsphotos/image000722.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000723.jpg" title="Added some killer Giro gloves to up my #lovestarfactoryteam color match game. #cycling #lazersport #cyclist" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Added some killer Giro gloves to up my #lovestarfactoryteam color match game. #cycling #lazersport #cyclist</small>
-                           </div>
-                           <img src="../lsphotos/image000723.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
